--- a/release/Config.cmake.in
+++ b/release/Config.cmake.in
@@ -2,3 +2,28 @@
 
 include("${CMAKE_CURRENT_LIST_DIR}/@CMAKE_PROJECT_NAME@Targets.cmake")
 check_required_components("@CMAKE_PROJECT_NAME@")
+
+set(JPEG_FOUND TRUE)
+
+if( TARGET libjpeg-turbo::jpeg)
+    set(JPEG_LIBRARY libjpeg-turbo::jpeg)
+elseif(TARGET libjpeg-turbo::jpeg-static)
+    set(JPEG_LIBRARY libjpeg-turbo::jpeg-static)
+endif()
+
+set(JPEG_LIBRARIES ${JPEG_LIBRARY})
+
+get_target_property(JPEG_INCLUDE_DIRS ${JPEG_LIBRARY} INTERFACE_INCLUDE_DIRECTORIES)
+
+# Create imported target JPEG::JPEG
+if(NOT TARGET JPEG::JPEG)
+    add_library(JPEG::JPEG INTERFACE IMPORTED)
+
+    set_target_properties(JPEG::JPEG PROPERTIES
+    INTERFACE_LINK_LIBRARIES "${JPEG_LIBRARY}"
+    )
+endif()
+
+message("Found JPEG-turbo: (found version @VERSION@)")
+
+
